standardize dir names

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,43 @@
 .RData
 .Ruserdata
 2021_W23_survivoR/tidytuesday_w23-RF.R
+2021-w27-animal-rescues/.DS_Store
+2021-w27-animal-rescues/2021-w27-animal-rescues.Rproj
+2021-w27-animal-rescues/choropleth-example.R
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.cpg
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.dbf
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.GSS_CODE.atx
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.prj
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.shp
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward.shx
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.cpg
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.dbf
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.prj
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.shp
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.shp.CSD-3-E6-2.10692.11168.sr.lock
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_ESRI/London_Ward_CityMerged.shx
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward.DAT
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward.ID
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward.MAP
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward.tab
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward_CityMerged.DAT
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward_CityMerged.ID
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward_CityMerged.MAP
+2021-w27-animal-rescues/London-wards-2018/London-wards-2018_Mapinfo/London_Ward_CityMerged.tab
+2021_W11_bechdel/2021_W11_bechdel.Rproj
+2021_W11_bechdel/tidytuesday_w11.R
+2021_w24_fish/2021-w24-plot-with-axes.png
+2021_w24_fish/2021-w24-plot.png
+2021_w24_fish/tidytuesday_w24.R
+2021_w25_dubois/2021_w25_dubois.Rproj
+2021_w25_dubois/dubois-viz2.jpeg
+2021_w25_dubois/dubois-viz3.jpeg
+2021_w25_dubois/dubois-viz4.jpeg
+2021_w25_dubois/dubois-viz6.jpeg
+2021_w25_dubois/english-ewt-ud-2.5-191206.udpipe
+2021_w25_dubois/PI_2021.04.07_Social-Media-Use_TOPLINE.pdf
+2021_w25_dubois/tidytuesday_w25.R
+2021_w25_dubois/tidytuesday_w25_TRASH.R
+2021_w26_parks/.DS_Store
+2021_w26_parks/fonts/Lazy-Sunday.ttf
+2021_w26_parks/w26-parks.Rproj
