--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@
 2021_w26_parks/.DS_Store
 2021_w26_parks/fonts/Lazy-Sunday.ttf
 2021_w26_parks/w26-parks.Rproj
+2021-w28/sample-code-gganimate.R
+2021-w11-bechdel/2021_W11_bechdel.Rproj
+*.Rproj
+2021-w29-scooby/.DS_Store
+2021-w23-survivoR/.DS_Store
+2021-w11-bechdel/tidytuesday_w11.R
+2021-w25-dubois/.DS_Store
+2021-w23-survivoR/tidytuesday_w23-append.R
